translate pt-br

--- a/_includes/education.html
+++ b/_includes/education.html
@@ -1,23 +1,33 @@
 <section class="thirteen columns">
-    <h1>Education</h1>
+    <h1>Formação Acadêmica</h1>
     <article>
         <header>
-            <h1>MSc in Advanced Computing</h1>
-            <span>University of Glasgow</span>
-            <span><address>Glasgow, UK</address><time>2011 to 2012</time></span>
+            <h1>Tecnologia em Sistemas de Computação</h1>
+            <span>CEDERJ/UFF</span>
+            <span><address>Campos dos Goytacazes, RJ.</address><time>Incompleto até 1º período</time></span>
         </header>
         <p>
-            <em>Thesis: Nemore verear an eos, duo accusam placerat urbanitas at, vix libris putent voluptaria ei.</em>
+            <em>Dissertação: </em>
         </p>
     </article>
     <article>
         <header>
-            <h1>Major in Computer Science</h1>
-            <span>University of College London</span>
-            <span><address>London, UK</address><time>2007 to 2011</time></span>
+            <h1>Técnico em Informática, Tecnologia da informação e serviços.</h1>
+            <span>Escola Técnica - New Informática</span>
+            <span><address>Campos dos Goytacazes, RJ.</address><time>2012 – 2013</time></span>
         </header>
         <p>
-            <em>Dissertation: Te dicit scripta nec, nec illud decore partem et.</em>
+            <em>Dissertação: </em>
+        </p>
+    </article>
+    <article>
+        <header>
+            <h1>Liceu de Humanidades de Campos.</h1>
+            <span>Ensino médio</span>
+            <span><address>Campos dos Goytacazes, RJ.</address><time>2010 – 2011</time></span>
+        </header>
+        <p>
+            <em>Dissertação: </em>
         </p>
     </article>
 </section>
