--- a/_includes/initiatives.html
+++ b/_includes/initiatives.html
@@ -1,21 +1,11 @@
 <section class="thirteen columns">
-    <h1>Initiatives</h1>
+    <h1>Cursos</h1>
     <article>
         <header>
-            <h1>Graduate Summer Student</h1>
-            <span><address>University of Glasgow, UK</address><time>2013</time></span>
+            <h1>CCAA</h1>
+            <span><address>Campos dos Goytacazes, RJ.</address><time>2013</time></span>
         </header>
-        <p>
-            Courses: Nec et duis iriure temporibus, ullum adolescens eam ea.
-        </p>
+        <p>Nível básico.</p>
     </article>
     <article>
-        <header>
-            <h1>Student Volunteer</h1>
-            <span><address>British RedCross, Glasgow, UK</address><time>2013</time></span>
-        </header>
-        <p>
-            Fundraiser: Lorem adipiscing ei eam, eros conceptam maiestatis ne sea.
-        </p>
-    </article>
 </section>
